--- a/assets/admin/pages/css/login.css
+++ b/assets/admin/pages/css/login.css
@@ -7,7 +7,8 @@ Login page
 ***/
 /* bg color */
 .login {
-  background-color: #364150 !important;
+  background-color: #364150 ;
+  background-image: url('../img/abastena-bg.jpg')
 }
 
 .login .logo {
@@ -18,7 +19,7 @@ Login page
 }
 
 .login .content {
-  top:120px;
+
   background-color: #eceef1;
   -webkit-border-radius: 7px;
   -moz-border-radius: 7px;
