--- a/assets/admin/pages/css/login.css
+++ b/assets/admin/pages/css/login.css
@@ -235,6 +235,9 @@ Login page
   }
 
   .forget-password {
+    top: -10px;
+    left: 14px;
+    position: relative;
     display: inline-block;
     margin-top: 20px;
   }
