--- a/assets/admin/layout3/css/layout.css
+++ b/assets/admin/layout3/css/layout.css
@@ -84,7 +84,7 @@ body.page-md {
 }
 
 /******
-General 
+General
 ******/
 /* Theme Font Color */
 .theme-font {
@@ -114,7 +114,7 @@ General
 }
 
 /******
-Page Header 
+Page Header
 ******/
 .page-header {
   background-color: #fff;
@@ -447,7 +447,7 @@ Page Header
 }
 
 /******
-Page Footer 
+Page Footer
 ******/
 .page-prefooter {
   background: #48525e;
@@ -1566,7 +1566,7 @@ Page Header
     display: none;
   }
 }
-/***  
+/***
 Pace - Page Progress
 ***/
 .pace .pace-progress {
@@ -1640,8 +1640,8 @@ Quick Sidebar Layout
   right: 0;
 }
 
-/*** 
-Quick Sidebar Toggler 
+/***
+Quick Sidebar Toggler
 ***/
 .page-quick-sidebar-toggler {
   overflow: hidden;
@@ -1971,8 +1971,8 @@ Quick Sidebar Layout
   background: #21282e;
 }
 
-/*** 
-Quick Sidebar Toggler 
+/***
+Quick Sidebar Toggler
 ***/
 .page-quick-sidebar-toggler {
   background: #36424c;
@@ -2109,7 +2109,7 @@ Quick Sidebar Content
 }
 
 .page-head {
-  background: #fff;
+  background: transparent;
 }
 .page-head .container {
   position: relative;
@@ -2120,7 +2120,7 @@ Quick Sidebar Content
   padding: 19px 0;
 }
 .page-head .page-title > h1 {
-  color: #697882;
+  color: #fff;
   font-size: 22px;
   font-weight: 400;
   margin: 0;
@@ -2158,8 +2158,9 @@ Quick Sidebar Content
 }
 
 .page-content {
-  background: #eff3f8;
-  padding: 15px 0 15px;
+
+  background-color:transparent;
+
 }
 
 @media (max-width: 991px) {
@@ -2412,8 +2413,8 @@ Theme Panel
     width: 105px !important;
   }
 }
-/***  
-Page Loading      
+/***
+Page Loading
 ***/
 .page-on-load {
   background: #fefefe;
