--- a/assets/admin/layout3/css/layout.css
+++ b/assets/admin/layout3/css/layout.css
@@ -665,7 +665,7 @@ Page Footer
     /* Top menu */
   }
   .page-header .top-menu {
-    background-color: #fff;
+    background-color: transparent;
   }
   .page-header-fixed-mobile .page-header .top-menu {
     background-color: #fff;
@@ -742,12 +742,13 @@ Page Header
   display: block;
   width: 255px;
   height: 75px;
+  margin-bottom: 4%;
 }
 .page-header .page-header-top .page-logo .logo-default {
   margin: 29.5px 0 0 0;
 }
 .page-header .page-header-top .top-menu {
-  margin: 13px 0 0;
+  margin: 65px 0 0;
   padding: 0;
   float: right;
 }
@@ -2118,6 +2119,7 @@ Quick Sidebar Content
   display: inline-block;
   float: left;
   padding: 19px 0;
+  margin-top:42px;
 }
 .page-head .page-title > h1 {
   color: #fff;
@@ -2166,7 +2168,7 @@ Quick Sidebar Content
 @media (max-width: 991px) {
   /* 991px */
   .page-head {
-    background: #EFF3F8;
+    background: transparent;
   }
   .page-head > .container {
     width: 100%;
