--- a/assets/admin/layout3/css/layout.css
+++ b/assets/admin/layout3/css/layout.css
@@ -2189,6 +2189,9 @@ Quick Sidebar Content
 .page-prefooter {
   padding: 30px 0;
   clear: both;
+  position:relative;
+  width:100%;
+  bottom:-190px;
 }
 .page-prefooter h2 {
   font-weight: 700;
@@ -2231,6 +2234,9 @@ Quick Sidebar Content
   font-size: 12px;
   font-weight: 300;
   padding: 17px 0;
+  width:100%;
+  position:relative;
+  bottom:-190px;
 }
 
 @media (max-width: 991px) {
