--- a/assets/admin/layout3/css/themes/default.css
+++ b/assets/admin/layout3/css/themes/default.css
@@ -9,7 +9,7 @@
 Boby
 ****/
 body {
-  background-image: url('img/abastena-bg.jpg');
+  background-image: url('../../img/abastena-bg.jpg');
   background-repeat: no-repeat;
   background-size:cover;
 }
