--- a/angularjs/views/dashboard.html
+++ b/angularjs/views/dashboard.html
@@ -577,8 +577,8 @@
 									</div>
 									<div class="task-title">
 										<span class="task-title-sp">
-										KeenThemes Investment Discussion </span>
-										<span class="label label-sm label-warning">KeenThemes </span>
+										 Investment Discussion </span>
+										<span class="label label-sm label-warning"> </span>
 									</div>
 									<div class="task-config">
 										<div class="task-config-btn btn-group">
