--- a/angularjs/views/form_tools.html
+++ b/angularjs/views/form_tools.html
@@ -53,7 +53,7 @@
 								<input type="text" id="typeahead_example_1" name="typeahead_example_1" class="form-control"/>
 							</div>
 							<p class="help-block">
-								E.g: metronic, keenthemes.<br>
+								E.g: metronic, .<br>
 								<span class="label label-success label-sm">
 								Learn more: </span>
 								<a target="_blank" href="http://twitter.github.io/typeahead.js/">
@@ -138,7 +138,7 @@
 												<input type="text" id="typeahead_example_modal_1" name="typeahead_example_modal_1" class="form-control"/>
 											</div>
 											<p class="help-block">
-												E.g: metronic, keenthemes.<br>
+												E.g: metronic, .<br>
 												<span class="label label-success label-sm">
 												Learn more: </span>
 												<a target="_blank" href="http://twitter.github.io/typeahead.js/">
