--- a/angularjs/views/profile/account.html
+++ b/angularjs/views/profile/account.html
@@ -48,7 +48,7 @@
 							</div>
 							<div class="form-group">
 								<label class="control-label">About</label>
-								<textarea class="form-control" rows="3" placeholder="We are KeenThemes!!!"></textarea>
+								<textarea class="form-control" rows="3" placeholder="We are !!!"></textarea>
 							</div>
 							<div class="form-group">
 								<label class="control-label">Website Url</label>
