--- a/angularjs/views/profile/main.html
+++ b/angularjs/views/profile/main.html
@@ -100,15 +100,15 @@
 					<span class="profile-desc-text"> Lorem ipsum dolor sit amet diam nonummy nibh dolore. </span>
 					<div class="margin-top-20 profile-desc-link">
 						<i class="fa fa-globe"></i>
-						<a href="http://www.keenthemes.com">www.keenthemes.com</a>
+						<a href="http://www..com">www..com</a>
 					</div>
 					<div class="margin-top-20 profile-desc-link">
 						<i class="fa fa-twitter"></i>
-						<a href="http://www.twitter.com/keenthemes/">@keenthemes</a>
+						<a href="http://www.twitter.com//">@</a>
 					</div>
 					<div class="margin-top-20 profile-desc-link">
 						<i class="fa fa-facebook"></i>
-						<a href="http://www.facebook.com/keenthemes/">keenthemes</a>
+						<a href="http://www.facebook.com//"></a>
 					</div>
 				</div>
 			</div>
