--- a/angularjs/views/file_upload.html
+++ b/angularjs/views/file_upload.html
@@ -1,7 +1,7 @@
 <!-- BEGIN PAGE BREADCRUMB -->
 <ul class="page-breadcrumb breadcrumb">
 	<li>
-		<a href="#">Home</a><i class="fa fa-circle"></i>
+		<a href="#" class="homelink">home</a><i class="fa fa-circle"></i>
 	</li>
 	<li class="active" data-ng-bind="$state.current.data.pageTitle">
 	</li>
