--- a/assets/admin/layout3/css/themes/default.css
+++ b/assets/admin/layout3/css/themes/default.css
@@ -8,6 +8,9 @@
 /****
 Boby
 ****/
+.homelink{
+  color:#4DB3A2 !important;
+}
 body {
   background-image: url('../../img/abastena-bg.jpg');
   background-repeat: no-repeat;
