--- a/angularjs/views/dashboard.html
+++ b/angularjs/views/dashboard.html
@@ -1,7 +1,7 @@
 <!-- BEGIN PAGE BREADCRUMB -->
 <ul class="page-breadcrumb breadcrumb hide">
 	<li>
-		<a href="#">Home</a><i class="fa fa-circle"></i>
+		<a href="#" class="homelink">home</a><i class="fa fa-circle"></i>
 	</li>
 	<li class="active">
 		Dashboard
