--- a/assets/global/css/components-rounded.css
+++ b/assets/global/css/components-rounded.css
@@ -1,5 +1,5 @@
 /*********************************
- METRONIC ROUNDED STYLE COMPONENTS 
+ METRONIC ROUNDED STYLE COMPONENTS
 *********************************/
 /*--------------------------------------------------
     [TRANSITION]
@@ -22,8 +22,8 @@ body {
 }
 
 /*
- Internet Explorer 10 doesn't differentiate device width from viewport width, and thus doesn't 
- properly apply the media queries in Bootstrap's CSS. To address this, 
+ Internet Explorer 10 doesn't differentiate device width from viewport width, and thus doesn't
+ properly apply the media queries in Bootstrap's CSS. To address this,
  you can optionally include the following CSS and JavaScript to work around this problem until Microsoft issues a fix.
 */
 @-webkit-viewport {
@@ -42,8 +42,8 @@ body {
   width: device-width;
 }
 /*
- Internet Explorer 10 doesn't differentiate device width from viewport width, 
- and thus doesn't properly apply the media queries in Bootstrap's CSS. To address this, following CSS code applied 
+ Internet Explorer 10 doesn't differentiate device width from viewport width,
+ and thus doesn't properly apply the media queries in Bootstrap's CSS. To address this, following CSS code applied
 */
 @-ms-viewport {
   width: auto !important;
@@ -1300,7 +1300,7 @@ Users
 }
 
 /***
-Top News Blocks(new in v1.2.2) 
+Top News Blocks(new in v1.2.2)
 ***/
 .top-news {
   color: #fff;
@@ -1750,7 +1750,7 @@ Simple Line Icons Demo
     width: 33.333%;
   }
 }
-/*** 
+/***
 Glyphicons Demo
 ***/
 .glyphicons-demo ul {
@@ -2580,7 +2580,7 @@ Chats
 }
 
 /***
-Customized Bootstrap Close Icon 
+Customized Bootstrap Close Icon
 ***/
 .close {
   display: inline-block;
@@ -4180,7 +4180,7 @@ Metro icons
 }
 
 /***
-Customized Bootstrap Modal 
+Customized Bootstrap Modal
 ***/
 .modal {
   z-index: 10050;
@@ -4909,7 +4909,7 @@ Portlets
   min-height: 48px;
 }
 .portlet.light > .portlet-title > .caption {
-  color: #666;
+  color: #4DB3A2;
   padding: 10px 0;
 }
 .portlet.light > .portlet-title > .caption > .caption-subject {
@@ -6009,7 +6009,7 @@ Light Table
 }
 
 /***
-Customized Bootstrap Tabs 
+Customized Bootstrap Tabs
 ***/
 /* Tabs and pills */
 .nav-tabs,
@@ -6199,7 +6199,7 @@ Custom tabs
   border-color: transparent;
 }
 .tabbable-custom > .nav-tabs > li.active {
-  border-top: 3px solid #F3565D;
+  border-top: 3px solid #4DB3A2;
   margin-top: 0;
   position: relative;
 }
@@ -11557,7 +11557,7 @@ Red Sunglo
 
 /* General Text & Icon Font Colors */
 .font-red-sunglo {
-  color: #E26A6A !important;
+  color: #4DB3A2 !important;
 }
 
 .progress-bar.red-sunglo {
